created html partials

--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -16,128 +16,10 @@
   </head>
 
   <body>
-    <div class="hamburger">
-      <a href="https://adalab.es/">
-        <img
-          class="hamburger-inner"
-          src="../assets/images/ico-menu.png"
-          alt="Menu-icon"
-          title="menu"
-        />
-      </a>
-    </div>
-    <header class="hero" id="hero">
-      <div class="hero-content">
-        <span class="title-item">anonymous</span>
-        <span class="title-item">proxy</span>
-        <p>In hac habitasse platea dictumst</p>
-      </div>
-      <div class="hero-circle">
-        <a href="#reasons">
-          <img
-            src="../assets/images/ico-scroll-down.png"
-            alt="icon-scroll"
-            title="Go reasons to purchase"
-          />
-        </a>
-      </div>
-    </header>
-
-    <main>
-      <div class="main">
-        <small class="tips">insomnia tips</small>
-        <h2>looking through a window</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet
-          voluptatem accusamus nesciunt odio vitae! .
-        </p>
-        <button class="main-button">Go</button>
-      </div>
-    </main>
-
-    <aside>
-      <div class="aside">
-        <div id="reasons" class="reasons">
-          <h2>3 reasons to purchase</h2>
-        </div>
-        <div class="reason-1">
-          <h3>Ut sed metus</h3>
-          <p>Lorem, ipsum dolor sit amet, consecteur.</p>
-        </div>
-        <div class="reason-2">
-          <h3>Curabitur ac erat</h3>
-          <p>Mauris mattis urna quis lorem molestie.</p>
-        </div>
-        <div class="reason-3">
-          <h3>Morbi dictum</h3>
-          <p>Aliquam in dolor et dolor tincidunt.</p>
-        </div>
-        <div class="button-reasons">
-          <button>More reasons</button>
-        </div>
-      </div>
-    </aside>
-    <footer>
-      <div class="footer">
-        <div class="footer-circle">
-          <a href="#hero">
-            <img
-              src="../assets/images/ico-arrow.png"
-              alt="icon-arrow"
-              title="Go to menu"
-            />
-          </a>
-        </div>
-        <div class="footer-items">
-          <div class="references">
-            <!-- flex -->
-            <nav class="nav-references">
-              <!-- flex -->
-              <ul class="list-footer">
-                <li>
-                  <a class="link-footer" href="https://adalab.es/">articles</a>
-                </li>
-                <li>
-                  <a class="link-footer" href="https://adalab.es/">books</a>
-                </li>
-                <li>
-                  <a class="link-footer" href="https://adalab.es/">events</a>
-                </li>
-                <li>
-                  <a class="link-footer" href="https://adalab.es/">reasons</a>
-                </li>
-                <li>
-                  <a class="link-footer" href="https://adalab.es/">tips</a>
-                </li>
-              </ul>
-            </nav>
-          </div>
-          <div class="networks">
-            <!--flex-->
-            <nav class="nav-networks">
-              <!-- flex -->
-              <ul class="list-footer">
-                <li>
-                  <a class="link-footer" href="https://adalab.es/">twitter</a>
-                </li>
-                <li>
-                  <a class="link-footer" href="https://adalab.es/">instagram</a>
-                </li>
-                <li>
-                  <a class="link-footer" href="https://adalab.es/"
-                    >mastodon.social</a
-                  >
-                </li>
-              </ul>
-            </nav>
-          </div>
-
-          <small class="copyright">
-            <span class="copy-item"> &copy; 2017 </span>
-            <span class="copy-item"> we ❤️ components</span>
-          </small>
-        </div>
-      </div>
-    </footer>
+    <partial src="_hamburger.html"></partial>
+    <partial src="_header.html"></partial>
+    <partial src="_main.html"></partial>
+    <partial src="_aside.html"></partial>
+    <partial src="_footer.html"></partial>
   </body>
 </html>
