--- a/_src/assets/scss/components/_header.scss
+++ b/_src/assets/scss/components/_header.scss
@@ -13,63 +13,73 @@
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
+
+  .title-item {
+    display: block;
+    font-family: "Roboto Slab";
+    font-weight: bold;
+    font-size: 2.625rem;
+    text-transform: uppercase;
+    line-height: 55px;
+  }
+  p {
+    font-size: 1rem;
+    font-family: "Roboto";
+    margin-top: 10px;
+  }
+
+  &-content {
+    margin: 284px 15px 174px 15px;
+  }
+
+  &-circle {
+    width: 45px;
+    height: 45px;
+    background: white;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 53px;
+  }
 }
-.hero-content {
-  margin: 284px 15px 174px 15px;
-}
-.hero .title-item {
-  display: block;
-  font-family: "Roboto Slab";
-  font-weight: bold;
-  font-size: 2.625rem;
-  text-transform: uppercase;
-  line-height: 55px;
-}
-.hero p {
-  font-size: 1rem;
-  font-family: "Roboto";
-  margin-top: 10px;
-}
-.hero-circle {
-  width: 45px;
-  height: 45px;
-  background: white;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  bottom: 53px;
-}
+
 @media all and (min-width: 768px) {
-  .hero-content {
-    margin: 384px 39px 172px 39px;
-  }
-  .hero .title-item {
-    font-size: 5rem;
-    line-height: 106px;
-  }
-  .hero p {
-    font-size: 1.5rem;
-    margin-top: 20px;
-  }
-  .hero-circle {
-    bottom: 45px;
+  .hero {
+    .title-item {
+      font-size: 5rem;
+      line-height: 106px;
+    }
+    p {
+      font-size: 1.5rem;
+      margin-top: 20px;
+    }
+    &-content {
+      margin: 384px 39px 172px 39px;
+    }
+
+    &-circle {
+      bottom: 45px;
+    }
   }
 }
 @media all and (min-width: 1200px) {
-  .hero-content {
-    margin: 384px 275px 120px 275px;
-  }
-  .hero .title-item {
-    font-size: 6.25rem;
-    line-height: 132px;
-  }
-  .hero p {
-    font-size: 1.5rem;
-    margin: 0px;
-  }
-  .hero-circle {
-    bottom: 13px;
+  .hero {
+    .title-item {
+      font-size: 6.25rem;
+      line-height: 132px;
+    }
+    p {
+      font-size: 1.5rem;
+      margin: 0px;
+    }
+    &-content {
+      margin: 384px 275px 120px 275px;
+    }
+
+    &-circle {
+      bottom: 13px;
+    }
   }
 }
