modified main partial to sass

--- a/_src/assets/scss/components/_hamburger.scss
+++ b/_src/assets/scss/components/_hamburger.scss
@@ -8,8 +8,9 @@
   height: 44px;
   background-color: #0271bc;
   position: fixed;
-}
-.hamburger-inner {
-  width: 16px;
-  height: 14px;
+
+  &-inner {
+    width: 16px;
+    height: 14px;
+  }
 }
