--- a/_src/assets/scss/components/_aside.scss
+++ b/_src/assets/scss/components/_aside.scss
@@ -14,89 +14,90 @@
     "reason-2 reason-2 reason-2"
     "reason-3 reason-3 reason-3"
     "button-reasons button-reasons button-reasons";
-}
-.aside .reasons {
-  font-family: "Roboto Slab";
-  font-weight: bold;
-  font-size: 1rem;
-  text-transform: capitalize;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  grid-area: reasons;
-  line-height: 30px;
-}
-.aside .reason-1 {
-  margin: 0px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  grid-area: reason-1;
-  line-height: 30px;
-}
-.aside {
-  margin: 0px;
+  .reasons {
+    font-family: "Roboto Slab";
+    font-weight: bold;
+    font-size: 1rem;
+    text-transform: capitalize;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-area: reasons;
+    line-height: 30px;
+  }
+  .reason-1 {
+    margin: 0px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    grid-area: reason-1;
+    line-height: 30px;
+  }
+  h3 {
+    margin: 0px;
+    font-family: "Roboto Slab";
+    font-weight: bold;
+    font-size: 1.125rem;
+    line-height: 30px;
+  }
+  p {
+    margin: 0px 70px;
+    font-family: "Roboto";
+    font-size: 1.125 rem;
+    text-align: center;
+    line-height: 30px;
+  }
+  .reason-2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    grid-area: reason-2;
+  }
+
+  .reason-3 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    grid-area: reason-3;
+  }
+
+  .button-reasons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    grid-area: button-reasons;
+    line-height: 30px;
+  }
+  button {
+    width: 184px;
+    height: 45px;
+    border-radius: 22.5px;
+    background-color: #f26002;
+    font-size: 1.25rem;
+    color: white;
+    border: solid #f26002;
+    margin-bottom: 60px;
+    transition: 0.4s;
+  }
+  button:hover {
+    font-size: 1.5rem;
+    background-color: white;
+    color: #f26002;
+    border: solid #f26002;
+  }
+
+  button:focus {
+    outline: 0;
+  }
 }
 
-.aside h3 {
-  margin: 0px;
-  font-family: "Roboto Slab";
-  font-weight: bold;
-  font-size: 1.125rem;
-  line-height: 30px;
-}
-.aside p {
-  margin: 0px 70px;
-  font-family: "Roboto";
-  font-size: 1.125 rem;
-  text-align: center;
-  line-height: 30px;
-}
-.aside .reason-2 {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  grid-area: reason-2;
-}
+// .aside {
+//   margin: 0px;
+// }
 
-.aside .reason-3 {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  grid-area: reason-3;
-}
-
-.aside .button-reasons {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  grid-area: button-reasons;
-  line-height: 30px;
-}
-.aside button {
-  width: 184px;
-  height: 45px;
-  border-radius: 22.5px;
-  background-color: #f26002;
-  font-size: 1.25rem;
-  color: white;
-  border: solid #f26002;
-  margin-bottom: 60px;
-  transition: 0.4s;
-}
-.aside button:hover {
-  font-size: 1.5rem;
-  background-color: white;
-  color: #f26002;
-  border: solid #f26002;
-}
-
-.aside button:focus {
-  outline: 0;
-}
 @media all and (min-width: 768px) {
   .aside {
     width: 100%;
@@ -107,36 +108,36 @@
       "reason-1 reason-2 reason-3"
       "reason-1 reason-2 reason-3"
       "button-reasons button-reasons button-reasons";
-  }
-  .aside .reasons {
-    font-size: 1.625rem;
-    line-height: 45px;
-  }
+    .reasons {
+      font-size: 1.625rem;
+      line-height: 45px;
+    }
 
-  .aside h3 {
-    font-size: 1.5rem;
-  }
-  .aside p {
-    font-size: 1.25 rem;
-    margin-left: 35.7px;
-    margin-right: 40px;
-  }
-  .aside button {
-    width: 210px;
+    h3 {
+      font-size: 1.5rem;
+    }
+    p {
+      font-size: 1.25 rem;
+      margin-left: 35.7px;
+      margin-right: 40px;
+    }
+    button {
+      width: 210px;
+    }
   }
 }
 @media all and (min-width: 1200px) {
   .aside {
     height: 427px;
-  }
-  aside.reasons {
-    font-size: 2rem;
-  }
-  .aside p {
-    margin-left: 81.2px;
-    margin-right: 85px;
-  }
-  .aside button {
-    width: 255px;
+    .reasons {
+      font-size: 2rem;
+    }
+    p {
+      margin-left: 81.2px;
+      margin-right: 85px;
+    }
+    button {
+      width: 255px;
+    }
   }
 }
