--- a/_src/assets/scss/components/_header.scss
+++ b/_src/assets/scss/components/_header.scss
@@ -1,6 +1,4 @@
 .hero {
-  color: red($color: #000000);
-  // width: 100vw;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -16,7 +14,7 @@
 
   .title-item {
     display: block;
-    font-family: "Roboto Slab";
+    font-family: $boldFont;
     font-weight: bold;
     font-size: 2.625rem;
     text-transform: uppercase;
@@ -24,7 +22,7 @@
   }
   p {
     font-size: 1rem;
-    font-family: "Roboto";
+    font-family: $principalFont;
     margin-top: 10px;
   }
 
