--- a/_src/assets/scss/components/_main.scss
+++ b/_src/assets/scss/components/_main.scss
@@ -7,7 +7,7 @@
   justify-content: space-evenly;
   align-items: left;
   h2 {
-    font-family: "Roboto Slab";
+    font-family: $boldFont;
     font-weight: bold;
     font-size: 1.5rem;
     line-height: 30px;
@@ -16,25 +16,25 @@
     margin: 0px;
   }
   p {
-    font-family: "Roboto";
+    font-family: $principalFont;
     font-size: 1.125rem;
     line-height: 30px;
     color: #4a4a4a;
     margin: 0px;
   }
   &-button {
-    font-family: "Roboto";
+    font-family: $principalFont;
     width: 76px;
     height: 45px;
     border-radius: 22.5px;
     background-color: white;
     font-size: 1.25rem;
-    color: #f26002;
-    border: solid #f26002;
+    color: $myOrange;
+    border: solid $myOrange;
     transition: 0.4s;
   }
   &-button:hover {
-    background-color: #f26002;
+    background-color: $myOrange;
     color: white;
     opacity: 0, 8;
     font-size: 1.5rem;
@@ -44,7 +44,7 @@
   }
 }
 .tips {
-  font-family: "Roboto";
+  font-family: $principalFont;
   font-size: 0.875rem;
   color: #8ccbea;
   text-transform: capitalize;
