--- a/_src/assets/scss/components/_header.scss
+++ b/_src/assets/scss/components/_header.scss
@@ -19,6 +19,7 @@
     font-size: 2.625rem;
     text-transform: uppercase;
     line-height: 55px;
+    box-shadow: 0px 2px 3px 0px rgba(0, 0, 0, 0.2);
   }
   p {
     font-size: 1rem;
