--- a/_src/assets/scss/components/_footer.scss
+++ b/_src/assets/scss/components/_footer.scss
@@ -19,8 +19,19 @@
     justify-content: center;
     align-items: center;
     box-shadow: 0px 2px 4px 0px #000000;
+    padding: 17px 0;
   }
-
+  &-circle:hover {
+    animation: arrow 1s 3;
+  }
+  @keyframes arrow {
+    0% {
+      box-shadow: 0 0 0 0px #f26002;
+    }
+    20% {
+      box-shadow: 0 0 0 10px #f26002;
+    }
+  }
   &-items {
     height: 465px;
     display: flex;
