modified pathimages for the button-arrows and hamburger in order to make them visible when publishing in githubs

--- a/_src/templates/partials/_hamburger.html
+++ b/_src/templates/partials/_hamburger.html
@@ -2,7 +2,7 @@
   <a href="https://adalab.es/">
     <img
       class="hamburger-inner"
-      src="../assets/images/ico-menu.png"
+      src="./assets/images/ico-menu.png"
       alt="Menu-icon"
       title="menu"
     />
