testing path images of hamburger and arrow buttons in order to make them visible when publishing

--- a/_src/templates/partials/_footer.html
+++ b/_src/templates/partials/_footer.html
@@ -3,7 +3,7 @@
     <div class="footer-circle">
       <a href="#hero">
         <img
-          src="./assets/images/ico-arrow.png"
+          src="../assets/images/ico-arrow.png"
           alt="icon-arrow"
           title="Go to menu"
         />
