--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -7,7 +7,7 @@
   <div class="hero-circle">
     <a href="#reasons">
       <img
-        src="./assets/images/ico-scroll-down.png"
+        src="../assets/images/ico-scroll-down.png"
         alt="icon-scroll"
         title="Go reasons to purchase"
       />
